# blight-of-yggdrasil

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.design/: structurizr.properties-example  workspace.dsl  workspace.json
.design/docs/: ideas.md
.workspace/: workspace.dsl  workspace.json
.workspace/.structurizr/index/: _0.cfe  _0.cfs  _0.si  segments_1
blight/: __main__.py  logging.py  main.py  math_utils.py
blight/client/: __init__.py  cli.py  net.py  state.py  ui.py
blight/client/ui/: __init__.py  interface.py
blight/game/: __init__.py  copy_dungeon.py  find_start_positions.py  generate_dungeon.py  print_dungeon.py  test.py
blight/server/: cli.py  engine.py  events.py  net.py
design/: workspace.dsl  workspace.json
design/.structurizr/index/: _0.cfe  _0.cfs  _0.si  segments_1
designs/: structurizr.properties  structurizr.properties-example  workspace.json
designs/docs/: 2_project_management.md
examples/: curses.py  test.py
src/: main.py
src/client/: cli.py  net.py  ui.py
src/server/: cli.py  engine.py  events.py  logic.py  net.py  story.py
src/services/: engine.py  events.py
yggdrasil/: __main__.py  logging.py
yggdrasil/client/: cli.py  net.py
yggdrasil/server/: cli.py  engine.py  events.py  net.py  state.py
