[tool.poetry]
name = "python-text-adventure"
version = "0.1.0"
description = ""
authors = ["Alex Howard <thezanke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"
python-dotenv = "^1.0.0"
windows-curses = { version="^2.3.1", optional = true }
aioconsole = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
