[tool.poetry]
name = "blight"
version = "0.1.0"
description = ""
authors = ["Alex Howard <thezanke@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.28.0"
python-dotenv = "^1.0.0"
aioconsole = "^0.6.2"
termcolor = "^2.3.0"


[tool.poetry.dependencies.windows-curses]
version = "^2.3.1"
markers = "sys_platform == 'win32'"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
blight = "blight:main"
